fixed contrast, fonts, headings

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,7 +136,7 @@ a {
   -webkit-transition: color 0.2s ease, border-bottom-color 0.2s ease;
   -ms-transition: color 0.2s ease, border-bottom-color 0.2s ease;
   transition: color 0.2s ease, border-bottom-color 0.2s ease;
-  border-bottom: dotted 1px rgba(255, 255, 255, 0.35);
+  border-bottom: dotted 1px rgba(255, 255, 255, 0.55);
   color: inherit;
   text-decoration: none;
 }
@@ -304,7 +304,7 @@ hr.major {
 }
 
 .muted-text {
-  color: rgba(255, 255, 255, 0.35);
+  color: rgba(255, 255, 255, 0.55);
 }
 
 .article-link {
@@ -315,6 +315,11 @@ hr.major {
 }
 .article-link:hover {
   border-bottom: 1px solid;
+}
+
+.font-bold {
+  color: #ffffff;
+  font-weight: bold;
 }
 
 /* Row */
@@ -1564,7 +1569,7 @@ input[type=reset]:hover,
 input[type=button]:hover,
 button:hover,
 .button:hover {
-  border-color: rgba(255, 255, 255, 0.55) !important;
+  border-color: rgba(255, 255, 255, 0.8) !important;
 }
 input[type=submit]:hover:after,
 input[type=reset]:hover:after,
@@ -1955,7 +1960,7 @@ input[type=radio] {
 input[type=checkbox] + label,
 input[type=radio] + label {
   text-decoration: none;
-  color: rgba(255, 255, 255, 0.55);
+  color: rgba(255, 255, 255, 0.8);
   cursor: pointer;
   display: inline-block;
   font-size: 1em;
@@ -2015,22 +2020,22 @@ input[type=radio] + label:before {
 }
 
 ::-webkit-input-placeholder {
-  color: rgba(255, 255, 255, 0.35) !important;
+  color: rgba(255, 255, 255, 0.55) !important;
   opacity: 1;
 }
 
 :-moz-placeholder {
-  color: rgba(255, 255, 255, 0.35) !important;
+  color: rgba(255, 255, 255, 0.55) !important;
   opacity: 1;
 }
 
 ::-moz-placeholder {
-  color: rgba(255, 255, 255, 0.35) !important;
+  color: rgba(255, 255, 255, 0.55) !important;
   opacity: 1;
 }
 
 :-ms-input-placeholder {
-  color: rgba(255, 255, 255, 0.35) !important;
+  color: rgba(255, 255, 255, 0.55) !important;
   opacity: 1;
 }
 
@@ -2353,7 +2358,7 @@ section.special, article.special {
 }
 
 header p {
-  color: rgba(255, 255, 255, 0.35);
+  color: rgba(255, 255, 255, 0.55);
   position: relative;
   margin: 0 0 1.5em 0;
 }
@@ -2611,13 +2616,13 @@ table.alt tfoot {
   position: relative;
 }
 .wrapper > .inner {
-  padding: 5em 5em 3em 5em;
+  padding: 2em 5em 0.1em 5em;
   max-width: 100%;
   width: 75em;
 }
 @media screen and (max-width: 1680px) {
   .wrapper > .inner {
-    padding: 4em 4em 2em 4em;
+    padding: 2em 4em 0.1em 4em;
   }
 }
 @media screen and (max-width: 1280px) {
@@ -2627,7 +2632,7 @@ table.alt tfoot {
 }
 @media screen and (max-width: 736px) {
   .wrapper > .inner {
-    padding: 3em 2em 1em 2em;
+    padding: 2em 2em 0.1em 2em;
   }
 }
 .wrapper.alt {
@@ -2772,7 +2777,7 @@ body.is-ie .wrapper.fullscreen {
 }
 #header > nav > ul > li a {
   border: 0;
-  color: rgba(255, 255, 255, 0.35);
+  color: rgba(255, 255, 255, 0.55);
   display: inline-block;
   font-size: 0.6em;
   font-weight: bold;
@@ -2780,7 +2785,7 @@ body.is-ie .wrapper.fullscreen {
   text-transform: uppercase;
 }
 #header > nav > ul > li a:hover {
-  color: rgba(255, 255, 255, 0.55);
+  color: rgba(255, 255, 255, 0.8);
 }
 #header > nav > ul > li a.active {
   color: #ffffff;
@@ -2849,7 +2854,7 @@ body.is-ie .wrapper.fullscreen {
 }
 #footer > .inner .menu {
   font-size: 0.8em;
-  color: rgba(255, 255, 255, 0.15);
+  color: rgba(255, 255, 255, 0.8);
 }
 #header + #wrapper + #footer > .inner {
   margin: 0 auto;
@@ -3045,7 +3050,7 @@ body.is-ie #sidebar > .inner {
   -ms-transition: color 0.2s ease;
   transition: color 0.2s ease;
   border: 0;
-  color: rgba(255, 255, 255, 0.35);
+  color: rgba(255, 255, 255, 0.55);
   display: block;
   font-size: 0.6em;
   font-weight: bold;
@@ -3081,7 +3086,7 @@ body.is-ie #sidebar > .inner {
   max-width: 0;
 }
 #sidebar nav a:hover {
-  color: rgba(255, 255, 255, 0.55);
+  color: rgba(255, 255, 255, 0.8);
 }
 #sidebar nav a.active {
   color: #ffffff;
