--- a/assets/sass/components/_wrapper.scss
+++ b/assets/sass/components/_wrapper.scss
@@ -10,12 +10,12 @@
 		position: relative;
 
 		> .inner {
-			@include padding(5em, 5em);
+			@include padding(2em, 5em);
 			max-width: 100%;
 			width: _size(inner-width);
 
 			@include breakpoint('<=xlarge') {
-				@include padding(4em, 4em);
+				@include padding(2em, 4em);
 			}
 
 			@include breakpoint('<=large') {
@@ -23,7 +23,7 @@
 			}
 
 			@include breakpoint('<=small') {
-				@include padding(3em, 2em);
+				@include padding(2em, 2em);
 			}
 		}
 
