--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -26,7 +26,7 @@
 
 			.menu {
 				font-size: 0.8em;
-				color: _palette(border);
+				color: _palette(fg);
 			}
 		}
 
